--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!--ez a komment--> 
+<!DOCTYPE html> <!--HTML5 nyelven íródott a dokumentum-->
+<html lang="hu"> <!--ebben íródik a weboldal, itt állítom be a nyelvet-->
+<head> <!--a böngészőnek ad utasításokat-->
+    <meta charset="UTF-8"> <!--itt állítom a karakterkódolást-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css"> <!--külső stíluslap csatolása (external)-->
+    <style>
+        h1 {
+            color: red; /*az összes h1-et színezi pirosra*/
+        }
+    </style> <!--belső stílusbeállítás (internal)-->
+    <title>Document</title> <!--a weboldal címe-->
+</head>
+<body> <!--a felhasználónak ad információkat-->
+    <h1 style="color: blueviolet;">Szöveg</h1> <!--címsor h1-h6-ig van, a style az inline stílusbeállítás a legerősebb-->
+</body>
+</html>
