--- a/index.html
+++ b/index.html
@@ -14,5 +14,18 @@
 </head>
 <body> <!--a felhasználónak ad információkat-->
     <h1 style="color: blueviolet;">Szöveg</h1> <!--címsor h1-h6-ig van, a style az inline stílusbeállítás a legerősebb-->
+    <p></p> <!--bekezdések készítése-->
+    <img src="link vagy img/kep.jpg" alt="ha nem jeleníthető meg a kép ezt a szöveget írja ki" title="ha a kép fölé visszük az egeret ezt a szöveget jeleníti meg"> <!--képet lehet beilleszteni ezzel az oldalra, a link hátránya hogy ha törlik akkor nem jelenik meg-->
+    <a href="link vagy saját oldalon navigáció vagy ugrópont" target="_blank"></a> <!--linkelés, 3 féle használat: 1. link (weboldal) új oldalon történő megnyitása a target="blank" lehetőséggel; 2. navigáció saját oldalon: pl.: cica.html; 3. ugrópont: az oldalon egy adott fejezethez ugrik a megfelelő egyedi azonosítóra hivatkozva (id) href="#cica"-->
+    
+    <!--számozatlan felsorolás, meglévő szöveggel gyors: F1 - wrap - Emmet: Wrap with Abbreviation - enter - ul>li* - enter-->
+    <ul>
+        <li>cica</li>
+        <li>kutya</li>
+        <li>madár</li>
+        <li>hal</li>
+        <li>kaméleon</li>
+    </ul> 
+
 </body>
 </html>
