--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head> <!--a böngészőnek ad utasításokat-->
     <meta charset="UTF-8"> <!--itt állítom a karakterkódolást-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css"> <!--külső stíluslap csatolása (external)-->
     <style>
         h1 {
@@ -25,7 +26,19 @@
         <li>madár</li>
         <li>hal</li>
         <li>kaméleon</li>
-    </ul> 
+    </ul>
+    
+    <!--2024. 11. 20. órai munka-->
+    <br> <!--sortörés-->
+    <hr> <!--vízszintes vonal-->
+    <span></span> <!--egyedi beállítások szavakra, mondatokra-->
+    <b></b> vagy <strong></strong> <!--félkövér betű stílus HTML tag segítségével-->
+    <p class="fw-bold"></p> <!--félkövér betű Bootstrap segítségével-->
+    <i></i> vagy <em></em> <!--dőlt betű HTML tag segítségével-->
+    <p class="fst-italic"></p> <!--dőlt betű Bootstrap stílus segítségével-->
+    <u></u> <!--aláhúzott HTML tag segítségével-->
+    <p class="text-decoration-underline"></p> <!--aláhúzott Bootstrap segítségével-->
+    <p class="text-decoration-none"></p> <!--aláhúzás megszüntetése Bootstrap segítségével-->
 
 </body>
 </html>
